2007-06-26  Akim Demaille  <demaille@gostai.com>

	Var scope
	* src/userver.cc (globalDelete): Move to...
	* src/parser/bison/ugrammar.y: here, as static.

2007-06-26  Akim Demaille  <demaille@gostai.com>

	Remove dead token
	* src/parser/bison/ugrammar.y (TOK_CMDBLOCK): Remove.

2007-06-26  Akim Demaille  <demaille@gostai.com>

	merge -r 1157:1186 https://svn.gostai.com/svn/kernel1/branches/1.0

2007-06-26  Akim Demaille  <demaille@gostai.com>

	* src/parser/bison/ugrammar.y (variables): Rename as...
	(names): this.

2007-06-22  Akim Demaille  <demaille@gostai.com>

	purevariable|variable -> name
	* src/parser/bison/ugrammar.y (variable, purevariable): Fuse
	into...
	(name): this.

2007-06-22  Akim Demaille  <demaille@gostai.com>

	lvalue
	* src/parser/bison/ugrammar.y (lvalue): New.
	Use where appropriate (assignments).
	(rvalue): "static" belongs to here.
	(variable): Adjust.

2007-06-22  Akim Demaille  <demaille@gostai.com>

	* src/parser/bison/ugrammar.y (derive): New.
	(ravlue): New.
	(variable): Adjust.
	* src/parser/bison/flex-lexer.hh, src/parser/uparser.cc,
	* src/parser/uparser.hh: Adjust includes.

2007-06-22  Akim Demaille  <demaille@gostai.com>

	class-definition.chk
	* src/parser/bison/ugrammar.y: Comment a weakness.
	* src/uexpression.cc: Formatting changes.

2007-06-22  Akim Demaille  <demaille@gostai.com>

	Simplify class defs
	* src/parser/bison/ugrammar.y (formal_arguments): New.
	(class_declaration): Use it to factor.

2007-06-22  Akim Demaille  <demaille@gostai.com>

	Fix list of identifiers handling
	* src/parser/bison/ugrammar.y (var.opt, identifiers.1): New.
	(identifiers): Use them.

2007-06-18  Jean-Christophe Baillie  <baillie@gostai.com>

	update externals (tests). 

2007-06-18  Jean-Christophe Baillie  <baillie@gostai.com>

        The +freeze flag notifies when the command gets frozen/unfrozen.

	add support for +freeze flag. 
	* src/parser/bison/ugrammar.y: add the same optim like for +end.