@@ -5074,12 +5074,11 @@ UCommand_CLASS::execute_(UConnection*)
   // morph into a series of & for each element of the class
   morph = 0;
 
-  UNamedParameters * param = parameters;
-  UCommand_DEF *cdef=0;
-  while (param)
+  for (UNamedParameters *param = parameters; param; param = param->next)
   {
     if (param->expression)
     {
+      UCommand_DEF* cdef = 0;
       switch (param->expression->type)
       {
 	case UExpression::VALUE:
@@ -5149,8 +5148,6 @@ UCommand_CLASS::execute_(UConnection*)
 	  morph = new UCommand_TREE(loc_, Flavorable::UAND, cdef, morph);
       }
     }
-
-    param = param->next;
   }
 
   if (morph)
@@ -5190,11 +5187,11 @@ MEMORY_MANAGER_INIT(UCommand_IF);
 UCommand_IF::UCommand_IF(const location& l,
 			 UExpression *test,
 			 UCommand* command1,
-			 UCommand* command2) :
-  UCommand(l, IF),
-  test (test),
-  command1 (command1),
-  command2 (command2)
+			 UCommand* command2)
+  : UCommand(l, IF),
+    test (test),
+    command1 (command1),
+    command2 (command2)
 {
   ADDOBJ(UCommand_IF);
 }
@@ -5268,12 +5265,12 @@ MEMORY_MANAGER_INIT(UCommand_EVERY);
  */
 UCommand_EVERY::UCommand_EVERY(const location& l,
 			       UExpression *duration,
-			       UCommand* command) :
-  UCommand(l, EVERY),
-  duration (duration),
-  command (command),
-  firsttime (true),
-  starttime (0)
+			       UCommand* command)
+  : UCommand(l, EVERY),
+    duration (duration),
+    command (command),
+    firsttime (true),
+    starttime (0)
 {
   ADDOBJ(UCommand_EVERY);
 }
